<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Power File Manager</string>
    <string name="Setting">Settings</string>
    <string name="Path">Path :</string>
    <string name="ParentFolder">Parent Folder</string>
    <string name="NoAppsToOpen">No Apps can open this file.</string>
    <string name="PressAgainToExit">Press again to exit.</string>
    <string name="Copy">Copy/Move</string>
    <string name="Paste">Paste</string>
    <string name="Delete">Delete</string>
    <string name="Move">Move To</string>
    <string name="Perm">Permission</string>
    <string name="Rename">Rename</string>
    <string name="Copying">Copying..</string>
    <string name="Moving">Moving..</string>
    <string name="Deleting">Deleting..</string>
    <string name="Wait">Please Wait.</string>
    <string name="CannotCopy">Cannot copy some item(s).</string>
    <string name="CannotMove">Cannot move some item(s).</string>
    <string name="NoStorage">No internal storage Found.</string>
    <string name="FileAlreadyExists">The file with same name is already exists.</string>
    <string name="NowStartMultiSelectMode">Now start Multi-Selection Mode. Short/Long Click will select the item. Press Back to exit.</string>
    <string name="EndofMultiSelectMode">Finish Multi-Selection Mode.</string>
    <string name="newFolder">Create new Folder</string>
    <string name="newFolder_Hint">Name of New Folder</string>
    <string name="newFile">Create new File</string>
    <string name="newFile_Hint">Name of New File</string>
    <string name="NowMultiSelected">Select just ONE items!</string>
    <string name="NoSelected">Select one item first.</string>
    <string name="Renaming">Renaming</string>
    <string name="Renaming_Hint">New Name</string>
    <string name="Finish">OK</string>
    <string name="Go">Run</string>
    <string name="Cancel">Cancel</string>
    <string name="ChangeStorage">Other Storages</string>
    <string name="InternalStorage">Internal Storage</string>
    <string name="ExternalStorage">External SD Card</string>
    <string name="NoExternalStorage">No External Memory</string>
    <string name="Unknown">Unknown</string>
    <string name="ShownDataCanIncorrect">Now Shown Internal/External Memory Division is just guess, So it can be incorrect data.</string>
    <string name="CannotGetStorageDataOnFroyo">Cannot get Internal/External Memory Division on Android 2.2 Froyo.</string>
    <string name="Search">Search</string>
    <string name="Search_Hint">Name of Searching File</string>
    <string name="Searching">Searching..</string>
    <string name="Design">DESIGN</string>
    <string name="ThemeSetting">App Theme</string>
    <string name="Light_DarkActionBar">Light Theme (Dark ActionBar)</string>
    <string name="Dark">Dark Theme</string>
    <string name="AppInfo">APP INFO</string>
    <string name="ViewSetting">VIEW</string>
    <string name="SortSetting">List Sort Options</string>
    <string name="FolderFirst">Folder first</string>
    <string name="ABC">ABC Order - UpperCase-LowerCase order</string>
    <string name="Alphabet">ABC Order - Alphabet Order</string>
    <string name="StartPath">Set Starting Path</string>
    <string name="AutomaticSet">Automatic</string>
    <string name="HiddenFileSetting">Show Hidden Files</string>
    <string name="HiddenFileSummary">Default : TRUE on Rooted Devices, FALSE on No-Rooted Devices</string>
    <string name="UseImageLoader">Show Thumbnail of Image Files</string>
    <string name="UseImageLoaderSummary">Default : On\nIf it\'s too slow, off this option.</string>
    <string name="ForRootUsers">Options about Root Mode</string>
    <string name="AutoPermissonOptions">Auto-Permission Options</string>
    <string name="AutoPermissionOptionsNotPro">Auto-Permission is for paid users!</string>
    <string name="AutoPermissionOptionsNotRoot">Auto-Permission is for rooted devices!</string>
    <string name="AutoRootCheck">Automatic Root Check</string>
    <string name="AutoRootCheckSummary">Automatic check root permission.\nIf disable this option, always use normal mode exploring.</string>
    <string name="RequestBusybox">This app requires Busybox. After Install, restart App.</string>
    <string name="SaveFile">Save</string>
    <string name="Buy">Upgrade to Pro Version</string>
    <string name="AlreadyBuy">You already bought this :) Unlocked Premium Functions!</string>
    <string name="BuyProTitle">Upgrade</string>
    <string name="BuyProMsg">To set multi-file permission (4+ files) and automatic permission set, You should upgrade this app.<Data><![CDATA[ <br></br><font color="red">Just $1.99!</font> ]]> </Data></string>
    <string name="RestartApp">Restarting App is Required after Changed Settings!</string>
    <string name="AskOpenWithTextEditor">Open this file with Text Editor?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="TextEditor">Text Editor</string>
    <string name="ifEmptythen">If Empty then, I will extract in now path.</string>
    <string name="Unzipping">Extracting..</string>
    <string name="Opening">Opening File..</string>
    <string name="ToUnZip">Destination to Unzip</string>
    <string name="Share">Share</string>
    <string name="Item_info">Details</string>
    <string name="Reboot">Reboot</string>
    <string name="RebootConfirm">REBOOT: Are you sure?</string>
    <string name="SomeDevicesNotOK">In some devices, may not work.</string>
    <string name="SelectAll">Select All</string>
    <string name="N_Selected"> Selected</string>
    <string name="Refresh">Refresh</string>
    <string name="AutoPermissionSetFinished">Auto-Permission Set Finished. Check it!</string>
    <string name="DeleteConfirm">DELETE: Are you sure?</string>
    <string name="CannotShare">No Apps found to share this item.</string>
    <string name="UnknownErrorDuringisPro">Unknown Error happened during checking the purchased item list.</string>
    <string name="SlideIt">To open menu: Slide left to right!</string>
    <string name="Crack_Detected">Crack attempt detected. Clear data of Play Store and Re-purchase this item.</string>
    <string name="OpenMenu">Open Menu</string>
    <string name="CloseMenu">Close Menu</string>
    <string name="FirstStart">Welcome</string>
    <string name="UpdateLogDialog">Update Log</string>
    <string name="GotoPlayStore">Go to Play Store</string>
    <string name="LeaveReview">Write Review and Leave 5 STARs at Play Store!^^</string>
    <string name="UpdateLog">v3.6 Update\n1. UI Improved (Added some margins)\n2. Added Icon in Navigation Drawer(Sliding Menu)\n3. Buttons position fixed\n4. Start-Path Option Added\n5. Improved Settings\n6. Improve for Out of Memory Error\n7. Fix : Bug in Change Storage menu above Android 4.3.\n* If you have an critical bug in Root Mode, Then update Busybox!</string>

</resources>