<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/RootMainLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/path"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="?android:attr/textColorPrimary"
                android:textIsSelectable="false" />

            <ListView
                android:id="@+id/MainList"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/CopyBtn"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onCopyBtnPress"
                android:text="@string/Copy"
                android:textSize="15sp" />

            <Button
                android:id="@+id/PasteBtn"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onPasteBtnPress"
                android:text="@string/Paste"
                android:textSize="15sp" />

            <Button
                android:id="@+id/MoveBtn"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onMoveBtnPress"
                android:text="@string/Move"
                android:textSize="15sp" />

            <Button
                android:id="@+id/DeleteBtn"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onDeleteBtnPress"
                android:text="@string/Delete"
                android:textSize="15sp" />

            <Button
                android:id="@+id/PermBtn"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onPermBtnPress"
                android:text="@string/Perm"
                android:textSize="15sp" />
        </LinearLayout>
    </FrameLayout>

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#FFF"
        android:choiceMode="singleChoice"
        android:dividerHeight="1dp" />

</android.support.v4.widget.DrawerLayout>